--- a/FrankenyFinalProject.css
+++ b/FrankenyFinalProject.css
@@ -49,7 +49,6 @@ button:active {
 	position:relative;
 	top:1px;
 }
-
 #gameScreen{
 	margin: 0;
 	padding: 0;
@@ -90,4 +89,14 @@ p{
 label{
 	color: #FFFFFF;
 	text-align: center;
+	font-size: 30px;
+}
+#usePicture{
+	width: 3em;
+	height: 3em;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+#mineCount{
+	color: #000000;
 }
